<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_video_player_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recipe_step_video_height">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/player_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:resize_mode="fill" />

            <ImageView
                android:id="@+id/iv_video_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:visibility="invisible" />
            <TextView
                android:id="@+id/tv_video_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_video_available_message"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:visibility="invisible" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_recipe_step_description"
            style="@style/RecipeStepDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_video_player_container"
            android:layout_marginTop="@dimen/fragment_recipe_step_detail_recipe_step_description_margin_top" />

        <Button
            android:id="@+id/btn_previous_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_recipe_step_description"
            android:layout_marginTop="@dimen/fragment_recipe_step_detail_navigation_button_margin_top"
            android:text="@string/fragment_recipe_step_detail_previous_button" />

        <Button
            android:id="@+id/btn_next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_recipe_step_description"
            android:layout_marginTop="@dimen/fragment_recipe_step_detail_navigation_button_margin_top"
            android:text="@string/fragment_recipe_step_detail_next_button" />
    </RelativeLayout>
</ScrollView>
